# Polygon_3D

./: CMakeLists.txt
polygon_3D/: polygon_3D.cpp  polygon_3D.h
polygon_3D/detail/: point.h  vector.h
test/: test_call.cpp
test/data/: coord.txt
